fix/ Test and thro Exception in City and Country Class